fix: remove text-overflow in input elements
This seems to be causing unexpected quirks, e.g. https://ubio.slack.com/archives/C0B6DFTTQ/p1598798997000500 and the general consensus that it is best to leave the browser defaults. That being said, I am not the author, so an additional pair of eyes will come in handy.

--- a/stylesheets/components/input.css
+++ b/stylesheets/components/input.css
@@ -3,8 +3,6 @@
     box-sizing: border-box;
     height: var(--control-height);
     align-items: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     border-radius: var(--border-radius);
     border: 1px solid var(--border-color);
     background-color: var(--input-background);
